<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.outsideaglass.chinect.MainActivityFragment"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:id="@+id/linearLayout"
        android:layout_marginBottom="@dimen/linear_layout_margin" >

        <Button
            android:text="@string/listening"
            android:id="@+id/listeningButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/button_red"
            style="@style/AppTheme.FirstPrimaryButton"
            android:textSize="@dimen/primary_button_text_size"/>

        <Button
            android:text="@string/writing"
            android:id="@+id/writingButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/AppTheme.Button"
            android:background="@drawable/button_yellow"
            android:textSize="@dimen/primary_button_text_size" />

        <Button
            android:text="@string/reading"
            android:id="@+id/readingButton"
            android:layout_height="wrap_content"
            style="@style/AppTheme.PrimaryButton"
            android:layout_width="wrap_content"
            android:background="@drawable/button_red"
            android:textSize="@dimen/primary_button_text_size" />

        <Button
            android:text="@string/speaking"
            android:id="@+id/speakingButton"
            android:layout_height="wrap_content"
            style="@style/AppTheme.PrimaryButton"
            android:background="@drawable/button_yellow"
            android:layout_width="wrap_content"
            android:textSize="@dimen/primary_button_text_size" />

        <Button
            android:text="@string/vocab"
            android:id="@+id/vocabButton"
            android:layout_height="wrap_content"
            style="@style/AppTheme.LastPrimaryButton"
            android:background="@drawable/button_red"
            android:layout_width="wrap_content"
            android:textSize="@dimen/primary_button_text_size" />
    </LinearLayout>

</LinearLayout>
